// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card default 1`] = `
<div
  class="css-1whabpp"
  data-cy="card"
>
  <div
    class="css-2yjhih"
  >
    Example Content
  </div>
</div>
`;

exports[`Card with aspectRatio set 1`] = `
<div
  class="css-1lk8bu3"
  data-cy="card"
>
  <div
    class="css-2yjhih"
  >
    Example Content
  </div>
</div>
`;

exports[`Card with paddingSize set 1`] = `
<div
  class="css-1whabpp"
  data-cy="card"
>
  <div
    class="css-jl90x"
  >
    Example Content
  </div>
</div>
`;
